<resources>
    <!--<string name="app_name">Expense Tracker</string>-->
    <string name="app_name">My Spends</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_payment_type">Add Payment Type</string>

    <string name="save">Save</string>
    <string name="payment">Payment</string>

    <string name="add">Add</string>
    <string name="please_select_payment_type">Please select Payment Type</string>
    <string name="enter_payment_name">Enter Payment Name</string>
    <string name="enter_valid_payment_name">Enter a valid Payment Name</string>
    <string name="Rs">\u20B9</string>
    <!--<string name="font_noto_sans">fontNotoSans</string>-->
    <string name="paid_by_">Paid by:</string>
    <string name="paid_by">Paid by</string>
    <string name="note">Note</string>
    <string name="done_caps">DONE</string>
    <string name="payment_types">Payment Types</string>
    <string name="pref_name">MySpendsPrefs</string>
    <string name="select_currency">Select Currency</string>
    <string name="expense_on">Expense on:</string>
    <string name="added_on">Added on:</string>
    <string name="last_updated_on">Last updated on:</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="confirm_discard_message">Are you sure you want to discard the changes?</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="delete">Delete</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="confirm_delete_message">Are you sure you want to delete this expense? It cannot be recovered later.</string>
    <string name="expense_deleted_successfully">Expense deleted successfully!</string>
    <string name="add_another_expense">Add another expense</string>
    <string name="add_another">Add another</string>
    <string name="add_new">Add New</string>
    <string name="expenses_for_month_of">Expenses for the month of</string>
    <string name="reports">Reports</string>
    <string name="about">About</string>
    <string name="about_app">About App</string>
    <string name="about_app_msg">My Spends is an app to track all your spends. And, first of it\'s kind to not to read your personal data.\n\nMy Spends keeps track of your spends by you adding them.
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="select_from_date">Select the from date</string>
    <string name="select_to_date">Select the to date</string>
    <string name="value_month_expenses">%s month expenses</string>
    <string name="no_expenses_found_in_filter">No expenses found in the filter applied.</string>
    <string name="logout">Logout</string>
    <string name="no_internet">No Internet Connection!</string>
    <integer name="splash_obj_time">1000</integer>
    <string name="payment_type">Payment Type</string>
    <string name="no_spends_tracked">No spends!\n\nAdd your spends to track.</string>
    <string name="unable_fetch_spends">Unable to fetch your spends.\n\nPlease check your internet connection.</string>
    <string name="no_spends_tracked_tune_filters">No spends tracked!\n\nFine tune your filters.</string>
    <string name="get_total">Get Total</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="spends_chart">Spends Chart</string>
    <string name="total">Total</string>
    <string name="message_board">Message Board</string>
    <string name="board">Board</string>

    <string-array name="imps">
        <item>An app to track all your spends.</item>
        <item>First of it\'s kind which DOESN\'T READ your data.</item>
        <!--<item>Track all your spends by adding them.</item>-->
        <item>Track your daily expenses, monthly bills, EMIs &amp; payments.</item>
        <item>All your spends data is stored in a secure server.</item>
    </string-array>

    <string name="confirm_exit_app">Press again to exit</string>
    <string name="spends_list_end">Light at the end of tunnel</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="filter">Filter</string>
    <string name="groupby_category">Groupby Spends Category</string>
    <string name="app_rate_msg">If you enjoy using My Spends, please take a moment to rate the app. Please encourage us by rating 5 stars. Thanks for your support!</string>
    <string name="info_previous_month_filter"><![CDATA[1<sup>st</sup> to last day of previous month.]]></string>
    <string name="info_current_month_filter"><![CDATA[1<sup>st</sup> to today of current month.]]></string>
    <string name="shout_out">Shout</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="whatsapp_label">WhatsApp people you just met.\nSKIP saving contact on phone.</string>
    <string name="whatsapp_info">[No symbols, only digits]\nSample: [INDIA]\n[CODE - 91] [NUMBER - 1234567890]</string>
    <string name="text_on_whatsapp">Text on WhatsApp</string>
    <string name="whatsapp_text">WhatsApp Text</string>
    <!--<string name="font">Font</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Theme</string>-->
</resources>
