<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_payment"
        android:title="@string/payment_type"
        app:showAsAction="always"
        android:icon="@drawable/ic_credit_card_primary_24dp" />

    <item
        android:id="@+id/menu_add_expense"
        android:title="@string/add_expense"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_primary_24dp"
        android:visible="false" />

    <item
        android:id="@+id/menu_message_board"
        android:title="@string/message_board"
        android:titleCondensed="@string/board"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/menu_reports"
        android:title="@string/reports"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about_app"
        app:showAsAction="never|withText"
        android:visible="false"/>

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never|withText"
        android:visible="false" />
</menu>