<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lfn_layout_complete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_screen">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/ave_toolbar"/>

    <LinearLayout
        android:id="@+id/ave_layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingStart="32dp"
        android:layout_below="@+id/ave_toolbar">

        <TextView
            android:id="@+id/ave_ctextview_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:fontFamily="@font/source_sans_pro" />

        <TextView
            android:id="@+id/ave_ctextview_expense_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:fontFamily="@font/source_sans_pro" />

        <TextView
            android:id="@+id/ave_ctextview_created_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/added_on"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:fontFamily="@font/source_sans_pro"
            android:visibility="gone" />

        <TextView
            android:id="@+id/ave_ctextview_updated_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/last_updated_on"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:fontFamily="@font/source_sans_pro"
            android:visibility="gone" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ave_layout_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/paid_by"
                android:textColor="#99000000"
                android:textSize="16sp"
                android:id="@+id/ave_cTextView_paid_by_header"
                android:drawableLeft="@drawable/ic_credit_card_white_24dp"
                android:drawableTint="@color/colorAccent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                app:fontFamily="@font/source_sans_pro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textColor="@color/primary_text"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:fontFamily="@font/source_sans_pro"
                android:id="@+id/ave_cTextView_paid_by" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/category"
                android:textColor="#99000000"
                android:textSize="16sp"
                android:id="@+id/ave_cTextView_category_header"
                android:drawableLeft="@drawable/ic_label_outline_24dp"
                android:drawableTint="@color/colorAccent"
                android:drawablePadding="8dp"
                app:fontFamily="@font/source_sans_pro"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textColor="@color/primary_text"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:fontFamily="@font/source_sans_pro"
                android:id="@+id/ave_cTextView_category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/note"
                android:textColor="#99000000"
                android:textSize="16sp"
                android:id="@+id/ave_cTextView_note_header"
                android:drawableLeft="@drawable/ic_comment_black_24dp"
                android:drawableTint="@color/colorAccent"
                android:drawablePadding="8dp"
                app:fontFamily="@font/source_sans_pro"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textColor="@color/primary_text"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:fontFamily="@font/source_sans_pro"
                android:id="@+id/ave_cTextView_note" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/ave_pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>